Globals: Fix - Global Control Select box - Fix - Letters with tails (g, j, q) are clipped at the bottom

--- a/assets/dev/scss/editor/panel/controls/_globals.scss
+++ b/assets/dev/scss/editor/panel/controls/_globals.scss
@@ -20,6 +20,7 @@
 		&-text {
 			white-space: nowrap;
 			overflow: hidden;
+			height: 14px;
 		}
 	}
 
